--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('//cdn.jsdelivr.net/npm/element-plus/dist/index.css');
 @import "variables";
 
 * {
@@ -37,6 +38,16 @@ body {
 
 .page {
   padding: 80px 0 166px;
+
+  @media only screen and (max-width: 1200px) {
+    padding-top: 40px;
+    padding-bottom: 80px;
+  }
+
+  @media only screen and (max-width: 576px) {
+    padding-top: 32px;
+    padding-bottom: 40px;
+  }
 }
 
 .container {
